// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should construct parsed-link and open it when clicked 1`] = `
<Link
  className=""
  href="/category/123"
>
  <div
    className="p-0 m-0 border-none text-align-left align-items-stretch w-100P "
    onClick={[Function]}
    role="link"
  >
    <span>
      Test
    </span>
  </div>
</Link>
`;

exports[`<Link /> should render inner content of the link 1`] = `
<div
  className="p-0 m-0 border-none text-align-left align-items-stretch w-100P "
  onClick={[Function]}
  role="link"
>
  <span>
    Test
  </span>
</div>
`;
